; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_presets.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_presets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_VCODEC_FFMPEG_MASK = common dso_local global i32 0, align 4
@x264_preset_names = common dso_local global i8** null, align 8
@HB_VCODEC_QSV_MASK = common dso_local global i32 0, align 4
@x265_preset_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @hb_video_encoder_get_presets(i32 %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @HB_VCODEC_FFMPEG_MASK, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i8** @hb_av_preset_get_names(i32 %9)
  store i8** %10, i8*** %2, align 8
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  switch i32 %12, label %15 [
    i32 132, label %13
    i32 133, label %13
  ]

13:                                               ; preds = %11, %11
  %14 = load i8**, i8*** @x264_preset_names, align 8
  store i8** %14, i8*** %2, align 8
  br label %16

15:                                               ; preds = %11
  store i8** null, i8*** %2, align 8
  br label %16

16:                                               ; preds = %15, %13, %8
  %17 = load i8**, i8*** %2, align 8
  ret i8** %17
}

declare dso_local i8** @hb_av_preset_get_names(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
